# stroke-rehab-python

./: .gitignore  BOARD_PERFORMANCE_VALIDATION.md  CMakeLists.txt  PERFORMANCE_MONITORING.md  README.md  board_env.sh  build_linux.sh  build_win.bat  check_env.py  deploy.sh  env_check.sh  main.py  requirements.txt  run_board.sh  run_mock_ui.py  setup_board.sh  stroke-rehab.desktop  test_capture.py  test_emg.py  test_inference.py  test_scoring.py  test_stage2.py  test_ui.py  test_voice.py  test_workflows.py  verify_models.py  verify_runtime.py
bindings/: module.cpp
configs/: calibration.yaml  courses.json  device.yaml  emg.yaml
docs/: board_operations.md  board_validation_20260721.md  capture_pipeline.md  deployment.md  emg_pipeline.md  emg_ui_and_report_design.md  migration_matrix.md  model_deployment.md  rgb_depth_array_transport.md  ui_architecture_logic.md  voice_assistant.md
engine/align/: HardwareD2CAligner.cpp  HardwareD2CAligner.h  SoftwareRegistrationAligner.cpp  SoftwareRegistrationAligner.h
engine/capture/: DepthCaptureOpenNI.cpp  DepthCaptureOpenNI.h  RgbCaptureV4L2.cpp  RgbCaptureV4L2.h
engine/common/: Config.h  FrameEnvelope.h  Timestamp.h
engine/emg/: EmgProtocol.h  EmgRpmsgClient.cpp  EmgRpmsgClient.h  EmgTypes.h
engine/pose/: AdaptiveRoiBoundingBoxProvider.cpp  AdaptiveRoiBoundingBoxProvider.h  DepthSampler.cpp  DepthSampler.h  EMASkeletonFilter.cpp  EMASkeletonFilter.h  Halpe26ToRehab22Mapper.cpp  Halpe26ToRehab22Mapper.h  Halpe26Types.h  JointNameMapper.cpp  JointNameMapper.h  JointProjector3D.cpp  JointProjector3D.h  PersonDetectorOrt.cpp  PersonDetectorOrt.h  PoseEstimator.cpp  PoseEstimator.h  PoseEstimatorRTMPoseOrt.cpp  PoseEstimatorRTMPoseOrt.h  Rehab22Types.h  SkeletonSmoother.cpp  SkeletonSmoother.h  SkeletonTypes.h
engine/sync/: SyncManager.cpp  SyncManager.h  TimestampNormalizer.cpp  TimestampNormalizer.h
engine/util/: FpsCounter.cpp  FpsCounter.h  Logger.h  ThreadAffinity.cpp  ThreadAffinity.h
rehab_engine/: __init__.py  _stub.py  alignment.py  capture.py  config_loader.py  course.py  diagnostics.py  emg.py  event_routing.py  inference.py  performance.py  pose3d.py  preview.py  recorder.py  reporting.py  scoring.py  sensor_pipeline.py  voice.py
tests/: test_alignment.py  test_capture.py  test_emg.py  test_pipeline_performance.py  test_pose3d.py  test_report_images.py  test_scoring.py  test_stage2.py  test_training_states.py  timestamp_normalizer_test.cpp
tools/: validate_app_shutdown.py  validate_capture_lifecycle.py  validate_pipeline_performance.py  validate_preview_switching.py  validate_real_depth.py  validate_real_pipeline.py  validate_rgb_depth_sync.py  validate_ui_alert_routing.py  verify_emg_rpmsg.py  verify_report_layout.py
tools/scoring_engine/: action_config.py  action_segmentation_template_eval.py  apis.py  feature_extractor.py  main.py  offline_html_report.py  offline_report_cli.py  realtime_joint_action_scorer.py  rom_quality_report.py  score_server.py  simulate_realtime_from_csv.py  transformCSV.py  viewer.py
ui/: __init__.py  main_window.py  report_images.py  theme.py
ui/dialogs/: __init__.py  runtime_dialogs.py
ui/pages/: patient_home_page.py  reports_page.py  settings_page.py  training_page.py
ui/widgets/: debug_panel.py  emg_panel.py  preview_widget.py  score_panel.py
